Grundlegender Aufbau + Titelblatt der Präsentation erstellt

--- a/presentation.tex
+++ b/presentation.tex
@@ -1,1 +1,24 @@
+\documentclass{beamer}
 
+\usepackage[english, ngerman]{babel}	% Englische und deutsche Rechtschreibung
+\usepackage[utf8]{inputenc}				% Umlaute-Darstellung unter Linux
+
+%-------------------- Titelblattinformationen ----------------------------
+\title{Qualitätssicherung in einer Scrum bassierten Entwiecklungsumgebung}
+\author{David Liebemann, Lucas Küntzer, Tobias Meier}
+\institute{Fachhochschule Trier}
+%--------------------------------------------------------------------------
+
+\begin{document}
+
+\begin{frame}
+%------------------------- Titelblatt -------------------------------------
+\titlepage
+%--------------------------------------------------------------------------
+\end{frame}
+
+\begin{frame}
+
+\end{frame}
+
+\end{document}
