--- a/presentation.tex
+++ b/presentation.tex
@@ -4,7 +4,8 @@
 \usepackage[utf8]{inputenc}				% Umlaute-Darstellung unter Linux
 
 %-------------------- Titelblattinformationen ----------------------------
-\title{Qualitätssicherung in einer Scrum bassierten Entwiecklungsumgebung}
+\title{Qualitätssicherung in einer Scrum basierten Entwicklungsumgebung}
+\subtitle{Kurzvortzrag}
 \author{David Liebemann, Lucas Küntzer, Tobias Meier}
 \institute{Fachhochschule Trier}
 %--------------------------------------------------------------------------
