--- a/presentation.tex
+++ b/presentation.tex
@@ -5,7 +5,7 @@
 
 %-------------------- Titelblattinformationen ----------------------------
 \title{Qualitätssicherung in einer Scrum basierten Entwicklungsumgebung}
-\subtitle{Kurzvortzrag}
+\subtitle{Kurzvortrag}
 \author{David Liebemann, Lucas Küntzer, Tobias Meier}
 \institute{Fachhochschule Trier}
 %--------------------------------------------------------------------------
