--- a/presentation.tex
+++ b/presentation.tex
@@ -3,7 +3,7 @@
 \usepackage[english, ngerman]{babel}	% Englische und deutsche Rechtschreibung
 \usepackage[utf8]{inputenc}				% Umlaute-Darstellung unter Linux
 
-\usecolortheme[]{default}
+\usecolortheme[]{default}				% theme der Präsentation
 
 %-------------------- Titelblattinformationen ----------------------------
 \title{Qualitätssicherung in einer Scrum basierten Entwicklungsumgebung}
@@ -59,19 +59,19 @@
 \frametitle{Testen}
 \begin{block}{Ansprüche an das Testen / den Tester}
 	\begin{itemize}
-		\item testfähiger Code kann erst ab dem 3. Tag erwartet werden
+		\item<2-> testfähiger Code kann erst ab dem 3. Tag erwartet werden
 		\begin{itemize}
-			\item Testfälle definieren, bzw Vorbereitung der Tests an den ersten Tagen
+			\item Testfälle definieren, bzw. Vorbereitung der Tests an den ersten Tagen
 		\end{itemize}
-		\item das Sprintziel soll nicht gefärdet werden: schnelles Testen
+		\item<3-> das Sprintziel soll nicht gefärdet werden: schnelles Testen
 		\begin{itemize}
 			\item automatisiert
 		\end{itemize}
 	\end{itemize}
 \end{block}
-\begin{block}{Gefahren wenn man Testen}
+\begin{block}<4->{Gefahren beim Testen}
 	\begin{itemize}
-		\item Viel Code in letzter Minute fertigstellen, fürt zu "keine Zeit für QA"
+		\item<5-> Viel Code in letzter Minute fertigstellen fürt zu "keine Zeit für QA"
 	\end{itemize}
 \end{block}
 %--------------------------------------------------------------------------
